syntax = "proto3";

package HelloWorld;

option csharp_namespace = "RxSpy.HelloWorld";
option optimize_for = SPEED;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}